Update website url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     This app helps you to do basic addition, subtraction, multiplication and division.
                 </p>
                 <!--                <p>I have developed this to help <b><em>you</em></b>.</p>-->
-                <p>Get one for your platform <span style="font-size:130% ;font-weight:800;"> &rarr; </span><a href="https://calcyapp.ml/"
+                <p>Get one for your platform <span style="font-size:130% ;font-weight:800;"> &rarr; </span><a href="https://varundevpro.github.io/calcy"
                         target="_blank">Try it</a></p>
             </section>
             <section>
@@ -47,7 +47,7 @@
                     then I use others laptop or the office desktop. Again I want to use my self-developed &amp; customised
                     <i>calcy</i>.</p>
                 <p>And you know what, I have developed it for the web too...</p>
-                <p>Here's the link <span style="font-size:130% ;font-weight:800;"> &rarr; </span><a href="https://calcyapp.ml/"
+                <p>Here's the link <span style="font-size:130% ;font-weight:800;"> &rarr; </span><a href="https://varundevpro.github.io/calcy"
                         target="_blank">Visit site</a></p>
                 <h3>A Bonus</h3>
                 <p>In addition to a desktop or mobile browser, I have used a new concept of PWA(Progressive Web Apps) to
